--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name": "suhail-md@1.3.9",
-  "description": "I am Suhail-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
+  "description": "I am Suhail-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : https://www.instagram.com/najjari_anas?igsh=bDVheWg2YWhoZ25s",
   "logo": "https://telegra.ph/file/dc36488a61f750187f182.jpg",
-  "keywords": ["whatsappbot", "suhailMd", "suhail Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
+  "keywords": ["whatsappbot", "Anas", "Anas Rn Najjari bot", "Anas En Najjari", "AnasEnNajjariWhatsaooBot", "AnasWaBot","AnasEnNajjari","Anas Md Whatsapp Bot","multi device"],
   "success_url": "/suhail/",
   "app_url": "/qr/",
   "stack":"container",
