--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "suhail-md@1.3.9",
-  "description": "I am Suhail-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : https://www.instagram.com/najjari_anas?igsh=bDVheWg2YWhoZ25s",
+  "description": "I am Anas En Najjari Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : https://www.instagram.com/najjari_anas?igsh=bDVheWg2YWhoZ25s",
   "logo": "https://telegra.ph/file/dc36488a61f750187f182.jpg",
   "keywords": ["whatsappbot", "Anas", "Anas Rn Najjari bot", "Anas En Najjari", "AnasEnNajjariWhatsaooBot", "AnasWaBot","AnasEnNajjari","Anas Md Whatsapp Bot","multi device"],
   "success_url": "/suhail/",
@@ -78,7 +78,7 @@
       "required" :false
     }, 
     "ELEVENLAB_API_KEY": {
-      "description": "Put your ElevenLab api key here for Aitts. Watch tutorial from https://youtu.be/HCDcdPtkwg4 ",
+      "description": "Put your ElevenLab api key here for Aitts. Watch tutorial from https://www.instagram.com/najjari_anas?igsh=bDVheWg2YWhoZ25s ",
       "value": "",
       "required" :false
     }, 
@@ -104,7 +104,7 @@
   }, 
   "addons": [{ "plan": "heroku-postgresql:essential-1" }],
   "buildpacks": [
-    { "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" },
-    { "url": "https://github.com/carlosdommor/heroku-buildpack-ffmpeg-latest" }
+    { "url": "https://www.instagram.com/najjari_anas?igsh=bDVheWg2YWhoZ25s" },
+    { "url": "https://www.instagram.com/najjari_anas?igsh=bDVheWg2YWhoZ25s" }
   ]
 }
